src/components/layouts/Experience.css
.experience-wrapper {
  width: 90%;
  margin: 0 auto;
  margin-bottom: 10%;
}

.experience-title {
  text-align: center;
  font-size: 38px;
  color: #3c3b48;
  font-weight: 600;
  margin-top: 10%;
  margin-bottom: 5%;
}

.parent {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(2, 1fr);
  grid-column-gap: 0px;
  grid-row-gap: 0px;
}

.div1 { grid-area: 1 / 1 / 2 / 3; }
.div2 { grid-area: 1 / 3 / 2 / 5; }
.div3 { grid-area: 2 / 1 / 3 / 3; }
.div4 { grid-area: 2 / 3 / 3 / 5; }

.company-hashicorp {
  cursor: pointer;
  height: 40vh;
  width: 90%;
  background-color: #FFFFFF;
  position: relative;
}

.company-thescore {
  cursor: pointer;
  height: 40vh;
  width: 90%;
  background-color: #FFFFFF;
  position: relative;
}

.company-sap {
  cursor: pointer;
  height: 40vh;
  width: 90%;
  margin-left: 10%;
  background-color: #FFFFFF;
  position: relative;
}

.company-esdc {
  cursor: pointer;
  height: 40vh;
  width: 90%;
  margin-top: 2%;
  background-color: #FFFFFF;
  position: relative;
}

.company-virtamove {
  cursor: pointer;
  height: 40vh;
  width: 90%;
  margin-top: 2%;
  margin-left: 10%;
  background-color: #FFFFFF;
  position: relative;
}

.company-healthcanada {
  cursor: pointer;
  height: 40vh;
  width: 90%;
  margin-top: 2%;
  background-color: #FFFFFF;
  position: relative;
}

.company-hashicorp:hover .overlay, .company-hashicorp:active .overlay {opacity: 1;}
.company-thescore:hover .overlay, .company-thescore:active .overlay {opacity: 1;}
.company-sap:hover .overlay, .company-sap:active .overlay {opacity: 1;}
.company-esdc:hover .overlay, .company-esdc:active .overlay {opacity: 1;}
.company-virtamove:hover .overlay, .company-virtamove:active .overlay {opacity: 1;}
.company-healthcanada:hover .overlay, .company-healthcanada:active .overlay {opacity: 1;}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: 0.5s ease;
  background-color: #F3f3f3;
  border-radius: 25px;
}

.company-image-hashicorp {
  width: 90%;
  position: absolute;
  display: block;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.company-image-thescore {
  width: 90%;
  position: absolute;
  display: block;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.company-image-sap {
  width: 75%;
  position: absolute;
  display: block;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.company-image-esdc {
  width: 90%;
  position: absolute;
  display: block;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.company-image-virtamove {
  width: 85%;
  position: absolute;
  display: block;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.company-image-healthcanada {
  width: 80%;
  position: absolute;
  display: block;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.company-desc {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.company-desc h4 {
  font-family: 'Roboto';
  margin-top: 20px;
  font-size: 24px;
  font-weight: 600;
  margin-bottom: 0px;
}

.company-desc h5 {
  font-family: 'Raleway';
  font-size: 18px;
  margin-bottom: 0px;
}

.company-desc p {
  font-family: 'Roboto';
  font-size: 14px;
  margin-top: 10px;
}

.text-white h4 {color: white;}
.text-white h5 {color: white;}
.text-white p {color: rgb(194, 194, 194);}
.text-black h4 {color: #3c3b48;}
.text-black h5 {color: #3c3b48;}
.text-black p {color: rgb(68, 68, 68);}

@media (max-width: 900px) {

  .parent {
    display: grid;
    grid-template-columns: 1fr repeat(4, 0);
    grid-template-rows: repeat(3, 1fr) 0 1fr;
    grid-column-gap: 0px;
    grid-row-gap: 0px;
  }
    
  .div1 { grid-area: 1 / 1 / 2 / 2; }
  .div2 { grid-area: 2 / 1 / 3 / 2; }
  .div3 { grid-area: 3 / 1 / 4 / 2; }
  .div4 { grid-area: 5 / 1 / 6 / 2; }

  .company-hashicorp { width: 100%; }
  .company-thescore { width: 100%; }
  .company-sap { width: 100%; margin-top: 30px; margin-left: 0%; }
  .company-esdc { width: 100%; margin-top: 30px; }
  .company-virtamove { width: 100%; margin-top: 30px; margin-left: 0%;}
  .company-healthcanada { width: 100%; margin-top: 30px; }

  .company-image-hashicorp {width: 90%;}
  .company-image-thescore {width: 80%;}
  .company-image-sap {width: 80%; }
  .company-image-healthcanada {width: 70%; }
  .company-image-virtamove {width: 85%; }

  .text-white h4 {font-size: 22px;}
  .text-white h5 {font-size: 18px;}
  .text-white p {font-size: 14px;}
  .text-black h4 {font-size: 22px;}
  .text-black h5 {font-size: 18px;}
  .text-black p {font-size: 14px;}
}

